<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Cafeteria Menu</string>
    <string name="evening">Evening</string>
    <string name="noon">Noon</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="loading">Loading menu</string>
    <string name="loading_error">Unable to load menu</string>
    <string name="no_internet">No Internet connection</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="loading_date">Loading…</string>
    <string name="settings">Settings</string>
    <string name="version">Version %s</string>
    <string name="no_day_data">No data for this day</string>
    <string name="no_menu_this_day">No menu on %s</string>
    <string name="update_available">Update available\nChangelog : %s</string>
    <string name="install_update">Install update</string>
    <string name="cancel">Cancel</string>
    <string name="no_changelog">No changelog (if you see this while checking for updates, wait a few minutes and try again)</string>
    <string name="permission_denied">The app don\'t have the permission (%s) needed to update itself</string>
    <string name="ok" translatable="false">OK</string>
    <string name="unknown_error">An error occurred while updating the app :\n%s</string>
    <string name="settings_button">Settings page</string>
    <string name="downloading">Downloading %s</string>
    <string name="download_error">There was an error while downloading the file or the download was canceled</string>
    <string name="downloading_progress">Downloading file %1$s : %2$s/%3$s</string>
    <string name="install_apk">Please install the %s file</string>
    <string name="install">Install</string>
    <string name="download_apk">Download latest apk</string>
    <string name="browser">Web Browser</string>
    <string name="app">In-app downloader</string>
    <string name="browser_or_app">How do you want to download the file ?</string>
    <string name="check_update">Check updates</string>
    <string name="up_to_date">The app is up to date</string>
    <string name="changelog_history">Changelog History</string>
    <string name="exit">Exit</string>
    <string name="loading_history">Loading Changelog History</string>
    <string name="changelogHistoryError">Error while loading history</string>
    <string name="actual">Actual</string>
    <string name="published">Published on %s</string>
    <string name="more">And more…</string>
    <string name="vegetarian" translatable="false">🍃</string>
    <string name="home_made" translatable="false">🏠</string>
    <string name="high_environmental_value" translatable="false">🌿</string>
    <string name="organic" translatable="false">🌱</string>
    <string name="home_made_chef_recipe" translatable="false">👨‍🍳</string>
    <string name="gluten" translatable="false">🌾</string>
    <string name="local_products" translatable="false">📍</string>
    <string name="assembled_on_site" translatable="false">🏡</string>
    <string name="emoji_explanation">Emoji explanation: \n\n🍃: Vegetarian\n🏠: Home made\n🌿: High environmental value\n🌱: Organic\n👨‍🍳: Home made chef recipe\n🌾: Gluten\n📍: Local products\n🏡: Assembled on site</string>
    <string name="more_menu_info">More info about the menu</string>
    <string name="more_menu_info_text">Nothing about the menu</string>
    <string name="more_menu_info_text_redaction_message">There\'s a message from the redaction:\n\n%s</string>
    <string name="more_menu_info_text_no_menu">No data for the menu</string>
    <string name="restart_where_you_left">Restart where you left</string>
    <string name="init_activity">Restart from :</string>
    <string name="update_channel">Update channel :</string>
    <string name="dev">Dev</string>
    <string name="alpha">Alpha</string>
    <string name="beta">Beta</string>
    <string name="stable">Release</string>
    <string name="contributors">Contributors</string>
    <string name="contributions">Contributions: %s</string>
    <string name="error_loading_contributors">Error while loading contributors</string>
    <string name="loading_contributors">Loading contributors</string>
    <string name="contributor_image">Contributor profile picture</string>
    <string name="no_when_pronote">No data when fetching from Pronote</string>
    <string name="pronote_connection_button">Connect to Pronote</string>
    <string name="pronote_password">Pronote password :</string>
    <string name="pronote_username">Pronote username :</string>
    <string name="pronote_connection">Pronote Connection</string>
    <string name="use_pronote">Use Pronote :</string>
    <string name="pronote_connection_error">Error while connecting to Pronote</string>
    <string name="and">and</string>
    <string name="disconnect_pronote">Disconnect from Pronote</string>
    <string name="pronote_disconnected">Disconnected from Pronote</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="disconnect_from_pronote_message">Are you sure you want to disconnect from Pronote ?</string>
    <string name="change_update_channel">Do you really want to change the update channel ?</string>
    <string name="change_api_url">Change Pronote API URL</string>
    <string name="api_url">API URL</string>
    <string name="change">Change</string>
    <string name="change_api_url_error">Error while changing API URL</string>
    <string name="change_api_url_success">Successfully changed API URL</string>
    <string name="label_emoji_explanation">Label explanation</string>
</resources>