<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical">


    <TextView
        android:id="@+id/app_name_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/color_on_secondary"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/date_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center">

        <ImageButton
            android:id="@+id/previous_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/previous"
            android:src="@drawable/chevron_left"
            app:tint="@color/color_on_secondary" />

        <TextView
            android:id="@+id/date_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/loading_date"
            android:textAlignment="center"
            android:textColor="@color/color_on_secondary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/next_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/next"
            android:src="@drawable/chevron_right"
            app:tint="@color/color_on_secondary" />
    </LinearLayout>


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/meal_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ListView
                android:id="@+id/menu_list_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginTop="16dp"
                android:divider="@android:color/transparent"
                android:dividerHeight="8dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/status_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:textAlignment="center"
                android:textColor="@color/color_on_secondary"
                android:textSize="50sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <LinearLayout
        android:id="@+id/bottom_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/color_secondary_variant"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="3">


        <ImageButton
            android:id="@+id/noon_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/color_selected_page_background"
            android:contentDescription="@string/noon"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_sun"
            app:tint="@color/sun" />


        <ImageButton
            android:id="@+id/evening_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/evening"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_moon"
            app:tint="@color/moon" />


        <ImageButton
            android:id="@+id/settings_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/settings"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_settings"
            app:tint="@color/settings" />
    </LinearLayout>

</LinearLayout>
