<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical">

    <!-- Top part of the screen -->
    <TextView
        android:id="@+id/appNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/colorOnSecondary"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- Message that says "Settings" -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textColor="@color/colorOnSecondary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- Settings buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:gravity="center">

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <!-- Button to reset the cache -->

                <Button
                    android:id="@+id/resetCacheButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorBackground"
                    android:text="@string/reset_cache"
                    android:textAlignment="center"
                    android:textColor="@color/colorOnSecondary"
                    android:textSize="20sp"
                    android:textStyle="bold" />
                <!-- Button to download apk in the Download folder -->
                <Button
                    android:id="@+id/downloadApkButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorBackground"
                    android:text="@string/download_apk"
                    android:textAlignment="center"
                    android:textColor="@color/colorOnSecondary"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/checkUpdateButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorBackground"
                    android:text="@string/check_update"
                    android:textAlignment="center"
                    android:textColor="@color/colorOnSecondary"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loading_version"
                    android:textAlignment="center"
                    android:textColor="@color/colorOnSecondary"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/made_by"
                    android:textAlignment="center"
                    android:textColor="@color/colorOnSecondary"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <!-- Version, build, etc. -->

    <!-- Barre de navigation -->
    <LinearLayout
        android:id="@+id/bottomBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/colorSecondaryVariant"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="3">

        <!-- Button for the lunch menu -->
        <ImageButton
            android:id="@+id/noonButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/noon"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_sun"
            app:tint="@color/sun" />

        <!-- Button for the diner menu -->
        <ImageButton
            android:id="@+id/eveningButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/evening"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_moon"
            app:tint="@color/moon" />

        <!-- Button for the settings -->
        <ImageButton
            android:id="@+id/settingsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorSelectedPageBackground"
            android:contentDescription="@string/settings_button"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_settings"
            app:tint="@color/settings" />
    </LinearLayout>

</LinearLayout>