<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/exit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@null"
        android:contentDescription="@string/exit"
        android:src="@drawable/ic_cross"
        app:tint="@color/color_secondary" />

    <TextView
        android:id="@+id/changelog_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/contributors"
        android:textAlignment="center"
        android:textColor="@color/color_on_secondary"
        android:textSize="24sp"
        android:textStyle="bold" />


    <LinearLayout
        android:id="@+id/history_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <ScrollView
            android:id="@+id/contributors_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginTop="16dp"
            android:divider="@android:color/transparent"
            android:dividerHeight="8dp"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/contributors_list_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

        </ScrollView>

        <TextView
            android:id="@+id/loading_contributors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loading_contributors"
            android:textAlignment="center"
            android:textColor="@color/color_on_secondary"
            android:textSize="45sp"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>